.next/dev/logs/next-development.log
[00:00:02.249] Server  LOG     ✓ Ready in 1988ms
[00:00:06.626] Server  ERROR   ⨯ ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: /Users/ujjawalsingh/Desktop/dashboard/src/app/globals.css:1:1: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Root.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at Object.Once (/Users/ujjawalsingh/Desktop/dashboard/node_modules/@tailwindcss/postcss/dist/index.js:10:6913)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:103:5)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


[00:00:06.957] Browser ERROR   uncaughtError: Error: ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: /Users/ujjawalsingh/Desktop/dashboard/src/app/globals.css:1:1: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Root.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at Object.Once (/Users/ujjawalsingh/Desktop/dashboard/node_modules/@tailwindcss/postcss/dist/index.js:10:6913)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:103:5)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


[00:00:07.094] Browser ERROR   ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: /Users/ujjawalsingh/Desktop/dashboard/src/app/globals.css:1:1: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Root.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at Object.Once (/Users/ujjawalsingh/Desktop/dashboard/node_modules/@tailwindcss/postcss/dist/index.js:10:6913)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:103:5)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]
[00:00:08.507] Browser ERROR   ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: /Users/ujjawalsingh/Desktop/dashboard/src/app/globals.css:1:1: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Root.error (turbopack:///[project]/node_modules/postcss/lib/node.js:146:32)]
    [at Object.Once (/Users/ujjawalsingh/Desktop/dashboard/node_modules/@tailwindcss/postcss/dist/index.js:10:6913)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:103:5)]
    [at async LazyResult.runAsync (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:293:11)]
    [at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34)]
    [at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]
[00:01:48.829] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:01:53.762] Browser WARN    THREE.THREE.Clock: This module has been deprecated. Please use THREE.Timer instead.
[00:02:00.394] Browser LOG     THREE.WebGLRenderer: Context Lost.
[00:04:37.554] Browser WARN    THREE.THREE.Clock: This module has been deprecated. Please use THREE.Timer instead.
[00:09:21.318] Browser LOG     THREE.WebGLRenderer: Context Lost.
[00:13:24.231] Server  LOG     ✓ Compiled in 695.3s
[00:13:25.005] Browser ERROR   ./src/app/dashboard/page.tsx:154:7
Parsing ecmascript source code failed
  152 |         
  153 |       
> 154 |     </>
      |       ^
  155 |   );
  156 | }

Expression expected

Import traces:
  Client Component Browser:
    ./src/app/dashboard/page.tsx [Client Component Browser]
    ./src/app/dashboard/page.tsx [Server Component]

  Client Component SSR:
    ./src/app/dashboard/page.tsx [Client Component SSR]
    ./src/app/dashboard/page.tsx [Server Component]
[00:15:18.072] Server  LOG     ✓ Compiled in 113.8s
[00:46:03.965] Server  LOG     ✓ Compiled in 194s
[00:50:20.310] Server  LOG     ✓ Compiled in 256.3s
[00:50:40.973] Server  LOG     ✓ Compiled in 20.7s
[00:50:41.091] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:50:44.361] Browser WARN    THREE.THREE.Clock: This module has been deprecated. Please use THREE.Timer instead.
[00:50:53.574] Browser LOG     THREE.WebGLRenderer: Context Lost.
